--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://rogue.db.elephantsql.com:5432/DBNAME?user=DBNAME&password=DBPASS
+spring.datasource.url=jdbc:postgresql://DBHOSTNAME:PORT/DBNAME?user=DBNAME&password=DBPASS
 spring.jpa.properties.javax.persistence.validation.mode = none
