added refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+server.port = 8080
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://DBHOSTNAME:PORT/DBNAME?user=DBNAME&password=DBPASS
+spring.datasource.url=jdbc:postgresql://otto.db.elephantsql.com:5432/kdtmqvkb?user=kdtmqvkb&password=GaXd_NloDmuHml1H0XJkSd7BwEpzRCR_
 spring.jpa.properties.javax.persistence.validation.mode = none
