fixing application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://otto.db.elephantsql.com:5432/kdtmqvkb?user=kdtmqvkb&password=GaXd_NloDmuHml1H0XJkSd7BwEpzRCR_
+spring.datasource.url=
 spring.jpa.properties.javax.persistence.validation.mode = none
